/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package stability.rpc;

import "src/devtools/common/metrics/stability/rpc/proto/rpc_error.proto";

option java_package = "com.google.devtools.common.metrics.stability.rpc.proto";
option java_outer_classname = "RpcErrorPayloadProto";

// This message needs to be proto2.
message RpcErrorPayload {
  // Required.
  optional int32 version_code = 2;

  // Required.
  optional RpcError rpc_error = 1;
}
